apps/stirling-pdf/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: stirling-pdf-ingress
  namespace: stirling-pdf
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: stirling-pdf-chart
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            k8s:app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
